--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p class="mb-0">We'll confirm you with a phone call to the given phone number. Stay tuned with our social media platforms!</p>
       </div>
       
-    <h1 style="text-align: center; font-size: 8vw;">I am responsive</h1>
+    <h1 style="text-align: center; font-size: 8vw;">xValidation - Javascript Form Validation</h1>
 
     <form class="mx-5">
         <div class="form-row">
